--- a/WinFormTester/WinFormTester.csproj
+++ b/WinFormTester/WinFormTester.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.Json" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.67.1" />
   </ItemGroup>
 
   <ItemGroup>
