--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -58,7 +58,7 @@ jobs:
     env:
       Solution_Name: WinFormTester.sln
       Test_Project_Path: TestPro\TestPro.csproj 
-      Wap_Project_Directory: TesterProyect\TesterProyect.csproj
+      Wap_Project_Directory: TesterProyect
 
     steps:
     - name: Checkout
@@ -78,7 +78,7 @@ jobs:
 
     # Execute all unit tests in the solution
     - name: Execute unit tests
-      run: dotnet test
+      run: dotnet test $
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
