--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -30,6 +30,14 @@ jobs:
       with:
         dotnet-version: 8.0.x
 
+    - name: Install SSDT tools
+      run: |
+        choco install sqlpackage --confirm
+        choco install microsoft-build-tools --confirm
+    
+    - name: Restore dependencies
+      run: dotnet restore
+        
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
