--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -29,6 +29,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+
+    - name: Install SSDT
+      run: |
+        choco install sql-server-data-tools --version=15.9.1
         
     - name: Restore dependencies
       run: dotnet restore
