--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Install SSDT
       run: |
-        choco install sql-server-data-tools --version=17.0.61812.05130 -y
+        choco install sql-server-data-tools -y
         
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
