--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -38,8 +38,8 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
-    - name: Build solution excluding SSDT project
-      run: dotnet build ${{ env.Solution_Name }} -c ${{ matrix.configuration }} /p:ExcludeProjects=env.DatabaseProj
-     
+    - name: Build solution excluding SSDT projec
+      run: dotnet build ${{ env.Solution_Name }} -c ${{ matrix.configuration }} /p:ExcludeProjects=${{ env.DatabaseProj }}
+  
     - name: Execute unit tests
       run: dotnet test
