--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -34,7 +34,11 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
 
-    
+    - name: Install SSDT
+      run: |
+           choco install sqlserver-ssdt
+           choco install sqlserver-ssdt-buildtools
+   
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
