--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -33,16 +33,11 @@ jobs:
         
     - name: Install dependencies
       run: dotnet restore
-
-    - name: Install SSDT
-      run: |
-           choco install sqlserver-ssdt
-           choco install sqlserver-ssdt-buildtools
-   
+      
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
-    - name: Build solution excluding SSDT projec
+    - name: Build solution excluding SSDT project
       run: dotnet build ${{ env.Solution_Name }} -c ${{ matrix.configuration }} /p:ExcludeProjects=${{ env.DatabaseProj }}
   
     - name: Execute unit tests
