--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -29,10 +29,10 @@ jobs:
     - name: Install .NET Core
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 9.0.x
         
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore ${{ env.Solution_Name }} --ignore-failed-sources
       
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
