--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -31,14 +31,17 @@ jobs:
       with:
         dotnet-version: 9.0.x
         
+    - name: Remove SSDT project from solution
+      run: dotnet sln ${{ env.Solution_Name }} remove ${{ env.DatabaseProj }}
+
     - name: Install dependencies
-      run: dotnet restore ${{ env.Solution_Name }} --ignore-failed-sources
+      run: dotnet restore ${{ env.Solution_Name }}
       
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
     - name: Build solution excluding SSDT project
-      run: dotnet build ${{ env.Solution_Name }} -c ${{ matrix.configuration }} /p:ExcludeProjects=${{ env.DatabaseProj }}
+      run: dotnet build ${{ env.Solution_Name }} -c ${{ matrix.configuration }}
   
     - name: Execute unit tests
       run: dotnet test
