--- a/TestPro/TestPro.csproj
+++ b/TestPro/TestPro.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TesterProyect\TesterProyect.csproj" />
+    <ProjectReference Include="..\TesterProyect\TesterProject.csproj" />
   </ItemGroup>
 
   <ItemGroup>
