--- a/WinFormTester/WinFormTester.csproj
+++ b/WinFormTester/WinFormTester.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TesterProyect\TesterProyect.csproj" />
+    <ProjectReference Include="..\TesterProyect\TesterProject.csproj" />
   </ItemGroup>
 
   <ItemGroup>
