--- a/TesterProject/TesterProject.csproj
+++ b/TesterProject/TesterProject.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Telegram.Bot" Version="22.4.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+
 </Project>
