--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -52,16 +52,10 @@ jobs:
     - name: Publish TesterProject for deployment
       run: dotnet publish ${{ env.Wap_Project_Directory}} -c ${{ matrix.configuration }} -o ${{ github.workspace }}/publish
 
-    - name: Deploy TesterProject DLLs via SCP
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ env.WINDOWS_SERVER_IP }}
-        username: ${{ env.WINDOWS_SERVER_USERNAME }}
-        password: ${{ env.WINDOWS_SERVER_PASSWORD }}
-        port: 22
-        source: "${{ github.workspace }}/publish/**/*.dll"
-        target: 'C:/wintest_publish/'
-        strip_components: 1
+
+    - name: Deploy TesterProject DLLs via SCP using native command
+      run: |
+        scp -P 22 -o StrictHostKeyChecking=no -r ${{ github.workspace }}/publish/**/*.dll ${{ env.WINDOWS_SERVER_USERNAME }}@${{ env.WINDOWS_SERVER_IP }}:C:/wintest_publish/
 
     - name: Deploy TesterProject Dependencies (si existen)
       run: |
