--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -16,6 +16,9 @@ jobs:
 
     env:
       Solution_Name: WinFormTester.sln
+      Blazor_Project_Path: TesterBlazor/TesterBlazor.csproj
+      Library_Project_Path: TesterProject/TesterProject.csproj
+      Publish_Output: ${{ github.workspace }}/publish
       Test_Project_Path: TestPro\TestPro.csproj 
       Wap_Project_Directory: TesterProject
       DatabaseProj: TesterDatabase\TesterDatabase.sqlproj
@@ -49,25 +52,25 @@ jobs:
     - name: Execute unit tests
       run: dotnet test
 
-    - name: Publish TesterProject for deployment
-      run: dotnet publish ${{ env.Wap_Project_Directory}} -c ${{ matrix.configuration }} -o ${{ github.workspace }}/publish
+    - name: Install dependencies for TesterProject
+      run: dotnet restore ${{ env.Library_Project_Path }}
 
+    - name: Build TesterProject libraries
+      run: dotnet build ${{ env.Library_Project_Path }} -c ${{ matrix.configuration }}
 
-    - name: Deploy TesterProject DLLs via SCP using native command
+    - name: Publish TesterProject libraries
+      run: dotnet publish ${{ env.Library_Project_Path }} -c ${{ matrix.configuration }} -o ${{ env.Publish_Output }}/TesterProject
+
+    - name: Install dependencies for Blazor project
+      run: dotnet restore ${{ env.Blazor_Project_Path }}
+
+    - name: Build Blazor project
+      run: dotnet build ${{ env.Blazor_Project_Path }} -c ${{ matrix.configuration }}
+
+    - name: Publish Blazor project
+      run: dotnet publish ${{ env.Blazor_Project_Path }} -c ${{ matrix.configuration }} -o ${{ env.Publish_Output }}/TesterBlazor
+
+    - name: Deploy Blazor app to IIS server
       run: |
-        scp -P 22 -o StrictHostKeyChecking=no -r ${{ github.workspace }}/publish/**/*.dll ${{ env.WINDOWS_SERVER_USERNAME }}@${{ env.WINDOWS_SERVER_IP }}:C:/wintest_publish/
-
-    - name: Deploy TesterProject Dependencies (si existen)
-      run: |
-        if exist ${{ github.workspace }}/publish/*.deps.json (
-          uses: appleboy/scp-action@master
-          with:
-            host: ${{ env.WINDOWS_SERVER_IP }}
-            username: ${{ env.WINDOWS_SERVER_USERNAME }}
-            password: ${{ env.WINDOWS_SERVER_PASSWORD }}
-            port: 22
-            source: "${{ github.workspace }}/publish/*.deps.json"
-            target: 'C:/wintest_publish'
-            strip_components: 1
-        )
+        scp -P 22 -o StrictHostKeyChecking=no -r ${{ env.Publish_Output }}/TesterBlazor/* ${{ env.WINDOWS_SERVER_USERNAME }}@${{ env.WINDOWS_SERVER_IP }}:C:/inetpub/wwwroot/TesterBlazor
 
