--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -55,6 +55,14 @@ jobs:
     - name: Install dependencies for TesterProject
       run: dotnet restore ${{ env.Library_Project_Path }}
 
+    - name: Debug Publish Output
+      run: dir c:/deploy/TesterBlazor
+
+    - name: Debug SCP Command
+      run: |
+        echo "Deploying files to server..."
+        scp -v -P 22 -o StrictHostKeyChecking=no -r c:/deploy/TesterBlazor/* ${{ env.WINDOWS_SERVER_USERNAME }}@${{ env.WINDOWS_SERVER_IP }}:C:/inetpub/wwwroot/TesterBlazor
+
     - name: Build TesterProject libraries
       run: dotnet build ${{ env.Library_Project_Path }} -c ${{ matrix.configuration }}
 
